other-vpol/unique-ingress-paths/unique-ingress-paths.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: unique-ingress-path
  annotations:
    policies.kyverno.io/title: Unique Ingress Path
    policies.kyverno.io/category: Sample in vpol
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/minversion: 1.17.0
    policies.kyverno.io/description: >-
      Just like the need to ensure uniqueness among Ingress hosts, there is a need to have the paths
      be unique as well. This policy checks an incoming Ingress to ensure its root path does not conflict with another
      root path in a different Namespace. It requires that incoming Ingress resources have a single
      rule with a single path only and assumes the root path is specified explicitly in an
      existing Ingress rule (ex., when blocking /foo/bar /foo must exist by itself and not part of
      /foo/baz).
spec:
  validationActions: [Deny]
  evaluation:
   background: 
    enabled: false
  matchConstraints:
    resourceRules:
      - apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["ingresses"]
  variables:
    - name: allpaths
      expression: >-
        resource.List("networking.k8s.io/v1", "ingresses", "" ).items
    - name: nspath
      expression: >-
        resource.List("networking.k8s.io/v1", "ingresses", object.metadata.namespace ).items    
  validations:
    - expression: >-
        !object.spec.rules.orValue([]).exists(rule, 
            rule.http.paths.orValue([]).exists(path, 
              (
                variables.allpaths.orValue([]).exists(existing_ingress, 
                  existing_ingress.spec.rules.orValue([]).exists(existing_rule, 
                    existing_rule.http.paths.orValue([]).exists(existing_path, 
                      existing_path.path == path.path 
                    )
                  )
                )
                &&
                ! variables.nspath.orValue([]).exists(existing_ingress, 
                        existing_ingress.metadata.namespace != object.metadata.namespace &&

                  existing_ingress.spec.rules.orValue([]).exists(existing_rule, 
                    existing_rule.http.paths.orValue([]).exists(existing_path, 
                    existing_path.path == path.path
                    )
                  )
                )
              )
            )
          )
      message: >-
        The root path already exists in the cluster but not in the namespace.
